--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen">
 
-    {% include 'includes/navbar.html' %}
+    {% include 'navigation/includes/navbar.html' %}
     
     <main class="flex-grow container mx-auto p-4">
         {% include 'includes/messages.html' %}
